src/test/ui/suggestions/impl-trait-missing-lifetime.stderr
error[E0637]: `'_` cannot be used here
  --> $DIR/impl-trait-missing-lifetime.rs:1:31
   |
LL | fn f(_: impl Iterator<Item = &'_ ()>) {}
   |                               ^^ `'_` is a reserved lifetime name

error: aborting due to previous error

For more information about this error, try `rustc --explain E0637`.
